# even-odd-rust

./: .gitignore  Cargo.toml  build.sh  test.sh
src/: lib.rs
tests/sim/: first_tests.rs  utils.rs
